# ardrone_station

./: 2016-07-06-17-54-34.bag  CMakeLists.txt
parameters/: 1_Distortion.xml  1_Intrinsic.xml  2_Distortion.xml  2_Intrinsic.xml  Distortion.xml  Intrinsics.xml  camera_1.txt  camera_1.txt~  camera_2.txt  camera_position_1.txt  camera_position_2.txt
src/: camera.cpp  camera.h  camera2.cpp  camera2.h  camera_calibration.cpp  camera_calibration.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painterWiget.cpp  receiver.cpp
